--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -5,7 +5,7 @@
    "id": "ef283f37-0ad4-48c7-bb92-8a09baaae6e5",
    "metadata": {},
    "source": [
-    "# Tag, retrieve, and save results"
+    "# Retrieve and save job results"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "id": "ec8277ad-1811-4318-8282-84d6d282bb17",
    "metadata": {},
    "source": [
-    "This guide focuses on best practices in retrieving and managing your job results, so that you can better organize, track, and understand your experiments."
+    "This guide focuses on how to use job tags, as well as how to save and retrieve results, so that you can better organize, track, and understand your experiments."
    ]
   },
   {
@@ -169,7 +169,7 @@
    "id": "d32e82e4-331c-43ec-ac86-a657f29f1469",
    "metadata": {},
    "source": [
-    "## Retrieve jobs from IBM Quantum\n",
+    "## Retrieve job results from IBM Quantum\n",
     "\n",
     "IBM Quantum automatically stores results from every job for you to retrieve at a later date. Use this feature to continue quantum programs across kernel restarts and review past results. You can get the ID of a job programmatically through its `job_id` method, or you can see all your submitted jobs and their IDs on the [Workloads page](https://quantum.cloud.ibm.com/workloads).\n",
     "\n",
@@ -339,7 +339,7 @@
   }
  ],
  "metadata": {
-  "description": "Use job_id and job tags to organize job results, and save results to disk.",
+  "description": "How to use job_id to retrieve results, and how to save results to disk.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -357,7 +357,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Tag, retrieve, and save results"
+  "title": "Retrieve and save job results"
  },
  "nbformat": 4,
  "nbformat_minor": 4
