--- a/docs/guides/add-job-tags.ipynb
+++ b/docs/guides/add-job-tags.ipynb
@@ -166,7 +166,7 @@
   }
  ],
  "metadata": {
-  "description": "How to use job_id to retrieve results, and how to save results to disk.",
+  "description": "Assign job tags, add and update tags, and search by tag to better organize your experiments.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -184,7 +184,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Retrieve and save job results"
+  "title": "Add and search by job tags"
  },
  "nbformat": 4,
  "nbformat_minor": 4
