--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "IBM Quantum automatically stores results from every job for you to retrieve at a later date. Use this feature to continue quantum programs across kernel restarts and review past results. You can get the ID of a job programmatically through its `job_id` method, or you can see all your submitted jobs and their IDs on the [Workloads page](https://quantum.cloud.ibm.com/workloads).\n",
     "\n",
-    "To find a job programmatically, use the [`QiskitRuntimeService.jobs`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#jobs) method. By default, this returns the most recent jobs, but you can also filter jobs by backend name, creation date, and more. The following cell finds any jobs submitted in the last three months. The `created_after` argument must be a [`datetime.datetime`](https://docs.python.org/3.8/library/datetime.html#datetime.datetime) object."
+    "To find a job programmatically, use the [`QiskitRuntimeService.jobs`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#jobs) method. By default, this returns the most recently submitted jobs, but you can also filter jobs by backend name, creation date, and more. The following cell finds any jobs submitted in the last three months. The `created_after` argument must be a [`datetime.datetime`](https://docs.python.org/3.8/library/datetime.html#datetime.datetime) object."
    ]
   },
   {
@@ -145,7 +145,7 @@
    "metadata": {},
    "source": [
     "<CodeAssistantAdmonition\n",
-    "  tagLine=\"Always forgetting how to retrieve a job? Try this prompt with Qiskit Code Assistant:\"\n",
+    "  tagLine=\"Always forgetting how to retrieve a job result? Try this prompt with Qiskit Code Assistant:\"\n",
     "  prompts={[\n",
     "    \"# Retrieve job JOB_ID from IBM Runtime and print the result\"\n",
     "  ]}\n",
@@ -159,7 +159,7 @@
    "source": [
     "## Save results to disk\n",
     "\n",
-    "You may also want to save results to disk. To do this, use Python's built-in JSON library with Qiskit Runtime's encoders."
+    "You may also want to save results to disk. To do this, use Python's built-in JSON library with encoders from Qiskit Runtime."
    ]
   },
   {
