--- a/docs/guides/local-testing-mode.ipynb
+++ b/docs/guides/local-testing-mode.ipynb
@@ -37,12 +37,12 @@
    "id": "435ec827-a348-4b70-b1ef-582849c0a76a",
    "metadata": {},
    "source": [
-    "Local testing mode (available with `qiskit-ibm-runtime` 0.22.0 or later) can be used to help develop and test programs before fine-tuning them and sending them to real quantum hardware.  After using local testing mode to verify your program, all you need to change is the backend name to run it on a QPU.\n",
+    "Local testing mode (available with `qiskit-ibm-runtime` v0.22.0 or later) can be used to help develop and test programs before fine-tuning them and sending them to real quantum hardware.  After using local testing mode to verify your program, all you need to change is the backend name to run it on a QPU.\n",
     "\n",
     "To use local testing mode, specify one of the fake backends from ``qiskit_ibm_runtime.fake_provider`` or specify a Qiskit Aer backend when instantiating a Qiskit Runtime primitive or a session.\n",
     "\n",
     "- **Fake backends**: The [fake backends](/docs/api/qiskit-ibm-runtime/fake-provider)  in ``qiskit_ibm_runtime.fake_provider`` mimic the behaviors of IBM&reg; QPUs by using QPU snapshots. The QPU snapshots contain important information about the QPU, such as the coupling map, basis gates, and qubit properties, which are useful for testing the transpiler and performing noisy simulations of the QPU. The noise model from the snapshot is automatically applied during simulation.\n",
-    "- **Aer simulator**: Simulators from [Qiskit Aer](simulate-with-qiskit-aer) provide higher-performance simulation that can handle larger circuits and [custom noise models](./build-noise-models). It also supports Clifford simulation mode, which can efficiently simulate Clifford circuits with a large number of qubits.\n",
+    "- **Aer simulator**: Simulators from [Qiskit Aer](simulate-with-qiskit-aer) provide higher-performance simulation that can handle larger circuits and [custom noise models](/docs/guides/build-noise-models). It also supports Clifford simulation mode, which can efficiently simulate Clifford circuits with a large number of qubits.\n",
     "\n",
     "\n",
     "<Admonition type=\"note\" title=\"Notes\">\n",
@@ -51,7 +51,7 @@
     "</Admonition>\n",
     "\n",
     "\n",
-    "{/* If you currently use the Qiskit SDK, you can use the existing Qiskit Aer primitives for local testing.  See [exact and noisy simulation with Qiskit Aer primitives](./simulate-with-qiskit-aer) for details. */}"
+    "{/* If you currently use the Qiskit SDK, you can use the existing Qiskit Aer primitives for local testing.  See [exact and noisy simulation with Qiskit Aer primitives](/docs/guides/simulate-with-qiskit-aer) for details. */}"
    ]
   },
   {
@@ -135,7 +135,13 @@
    "id": "6a511de6-dc37-4ac4-87f8-bee90e3014a3",
    "metadata": {},
    "source": [
-    "To simulate with noise, specify a QPU (quantum hardware) and submit it to Aer.  Aer builds a noise model based on the calibration data from that QPU, and instantiates an Aer backend with that model.  If you prefer, you can [build a noise model](./build-noise-models).\n",
+    "To simulate with noise, specify a QPU (quantum hardware) and submit it to Aer.  Aer builds a noise model based on the calibration data from that QPU, and instantiates an Aer backend with that model.  If you prefer, you can [build a noise model](/docs/guides/build-noise-models).\n",
+    "\n",
+    "<Admonition type=\"caution\">\n",
+    "A QPU can be affected by different kinds of noise. The Qiskit Aer noise model used here only simulates some of them and therefore is likely to be less severe than the noise on a real QPU.\n",
+    "\n",
+    "For details on what errors are included when initializing a noise model from a QPU, see the Aer [`NoiseModel`](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.noise.NoiseModel.html#qiskit_aer.noise.NoiseModel.from_backend) API reference.\n",
+    "</Admonition>\n",
     "\n",
     "Example with noise:"
    ]
@@ -179,7 +185,7 @@
     "<span id=\"clifford-sim\"></span>\n",
     "### Clifford simulation\n",
     "\n",
-    "Because Clifford circuits can be simulated efficiently with verifiable results, Clifford simulation is a very useful tool. For an in-depth example, see [Efficient simulation of stabilizer circuits with Qiskit Aer primitives](./simulate-stabilizer-circuits).\n",
+    "Because Clifford circuits can be simulated efficiently with verifiable results, Clifford simulation is a very useful tool. For an in-depth example, see [Efficient simulation of stabilizer circuits with Qiskit Aer primitives](/docs/guides/simulate-stabilizer-circuits).\n",
     "\n",
     "Example:"
    ]
@@ -222,10 +228,10 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "    - Review detailed [primitives examples.](./primitives-examples)\n",
+    "    - Review detailed [primitives examples.](/docs/guides/primitives-examples)\n",
     "    - Read [Migrate to V2 primitives](/docs/migration-guides/v2-primitives).\n",
     "    - Practice with primitives by working through the [Cost function lesson](/learning/courses/variational-algorithm-design/cost-functions) in IBM Quantum Learning.\n",
-    "    - Learn how to transpile locally in the [Transpile](./transpile) section.\n",
+    "    - Learn how to transpile locally in the [Transpile](/docs/guides/transpile) section.\n",
     "    - Try the [Compare transpiler settings](/docs/tutorials/circuit-transpilation-settings#compare-transpiler-settings) tutorial.\n",
     "</Admonition>"
    ]
