--- a/docs/guides/cloud-setup-invited.mdx
+++ b/docs/guides/cloud-setup-invited.mdx
@@ -25,7 +25,7 @@ Your user account is associated with one or more [instances](./instances), ident
 ### Before you begin
 
 1. Accept the email invitation.
-1. Log in with an IBMid or Google account.  **The profile that you use to log in to IBM Cloud or IBM Quantum Platform in this step is not your IBM Cloud account.**  After logging in, confirm your information and accept the invitation to join the account.
+1. Log in with an IBMid or Google account.  Note that the profile that you use to log in to IBM Cloud or IBM Quantum Platform in this step is not your IBM Cloud account.  After logging in, confirm your information and accept the invitation to join the account.
 1. Navigate back to [IBM Quantum Platform.](https://quantum.cloud.ibm.com)
 1. Make sure that the correct account and region are selected in the account switcher in the header, as shown in the following image.
     * Choose the account that was invited in the email.
@@ -34,17 +34,21 @@ Your user account is associated with one or more [instances](./instances), ident
     ![The IBM Quantum Platform header is shown.  The account switcher is to the right of the search bar.  The region switcher is to the right of the account switcher.](/docs/images/guides/cloud-setup/IQP-Header.svg 'IBM Quantum Platform header')
 
 
-<span id="access-credentials"></span>
-### 1. Find your access credentials
-    1. Find your API key. From the [dashboard](https://quantum.cloud.ibm.com/), create your API key, then copy it to a secure location so you can use it for authentication.
-    2. Optional: Find the instance you want to use from the [Instances](https://quantum.cloud.ibm.com/instances) page. Click the icon to copy its CRN, then save it in a secure location so you can use it to identify the instance.
+### 2. Optional: Save your access credentials
+
+If you are using a trusted Python environment, such as a personal laptop, it is recommended that you use the `save_account()` method to [save your credentials locally.](/docs/guides/save-credentials)
 
 <span id="cloud-save"></span>
-### 2. Connect Qiskit with your service instance
-Follow the appropriate steps to connect Qiskit with your Qiskit Runtime service instance:
-- [Initialize your Qiskit Runtime service account](initialize-account): Visit this guide if you are working in a trusted environment; such as a personal laptop.
-- [Initialize the service in an untrusted environment](/docs/guides/cloud-setup-untrusted): Visit this guide if you are not using a secure environment. For example, if you are using a public comptuer.
-- Follow [these instructions](/docs/guides/cloud-setup-rest-api) if you want to connect by using the REST API instead of using Qiskit.
+### 3. Connect Qiskit with your service instance
+
+- [Initialize the service](/docs/guides/initialize-account) in a **trusted Python environment**
+- [Initialize the service in an **untrusted environment**](/docs/guides/cloud-setup-untrusted) (such as a public computer)
+
+<Admonition type="note" title="Notes">
+   * Follow [these instructions](/docs/guides/cloud-setup-rest-api) if you want to connect by using the REST API instead of using Qiskit.
+   * If necessary, use [this information](/docs/guides/quickstart-steps-org#firewall) to configure your firewall to enable access to the IBM Quantum API endpoints.
+</Admonition>
+
 
 ## Next steps
 
@@ -53,7 +57,5 @@ Follow the appropriate steps to connect Qiskit with your Qiskit Runtime service 
   -  [Configure the Qiskit SDK locally.](configure-qiskit-local)
   -  [Set up to use IBM Quantum Platform with REST API](/docs/guides/cloud-setup-rest-api)
   -  Follow the steps in [Hello world](/docs/tutorials/hello-world) to write and run a quantum program.
-  -  [Set up to use IBM Quantum Platform with REST API.](/docs/guides/cloud-setup-rest-api)
-  -  If necessary, [configure your firewall to enable access to the IBM Quantum API endpoints.](/docs/guides/quickstart-steps-org#firewall)
   -  Try a [tutorial](/docs/tutorials).
 </Admonition>
