--- a/docs/guides/cloud-setup-untrusted.mdx
+++ b/docs/guides/cloud-setup-untrusted.mdx
@@ -18,6 +18,12 @@ Follow these instructions if you are working with IBM Cloud or the IBM Qiskit Ru
       If you accidentally share your key with someone or include it in version control like Git, immediately revoke your key by following the [Deleting an API key](https://cloud.ibm.com/docs/account?topic=account-userapikey&interface=ui#delete_user_key) topic on IBM Cloud.
     </Admonition>
 
+<span id="access-credentials"></span>
+## Find your access credentials
+
+1. Find your API key (also referred to as an  _API token_). From the [dashboard](https://quantum.cloud.ibm.com/), create your API key, then copy it to a secure location so you can use it for authentication. The token will not be visible again. Note that you can use a single API key to connect to any region.
+2. Optional: Find the instance you want to use from the [Instances](https://quantum.cloud.ibm.com/instances) page. Click the icon to copy its CRN, then save it in a secure location so you can use it to identify the instance.
+
 ## Authenticate to IBM Cloud in an untrusted environment
 
 To initialize the service in this situation, use code like the following:
