--- a/docs/tutorials/lrcx-with-parallel-bell-pairs.ipynb
+++ b/docs/tutorials/lrcx-with-parallel-bell-pairs.ipynb
@@ -618,18 +618,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e0476bef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "qiskit_runtime_service._get_crn_from_instance_name:WARNING:2025-09-12 16:48:10,456: Multiple instances found. Using all matching instances.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set up access to IBM Quantum devices \n",
     "from qiskit.circuit import IfElseOp\n",
@@ -1171,6 +1163,7 @@
   }
  ],
  "metadata": {
+  "description": "This tutorial implement a long-range CNOT using dynamic circuits with Bell pairs, measurement, and feedforward, and compare it to a direct unitary approach.",
   "kernelspec": {
    "display_name": "qiskit-tutorials-comp",
    "language": "python",
@@ -1187,7 +1180,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.4"
-  }
+  },
+  "title": "Long-range CNOT with parallel bell pairs"
  },
  "nbformat": 4,
  "nbformat_minor": 5
