remove tooltips from links

--- a/learning/courses/quantum-safe-cryptography/cryptographic-hash-functions.ipynb
+++ b/learning/courses/quantum-safe-cryptography/cryptographic-hash-functions.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "## Introduction to cryptographic hashing\n",
     "\n",
-    "<DefinitionTooltip definition=\"Reference: Cryptographic hash function, Wikipedia. Jun. 2023. Accessed: Jun. 27, 2023.\">[Hash functions](https://en.wikipedia.org/w/index.php?title=Cryptographic_hash_function&oldid=1159000809)</DefinitionTooltip> represent a valuable construct in cryptography as they help enable validation with confidentiality. As such, hash functions form an important component of mechanisms for data authentication and integrity, such as <DefinitionTooltip definition=\"Reference: HMAC: Trace used to verify authenticity, integrity, and origin of digital documents. HMAC, Wikipedia. Jun. 2023.\">[hash-based message authentication codes](https://en.wikipedia.org/w/index.php?title=HMAC&oldid=1158164088)</DefinitionTooltip> (HMAC) and <DefinitionTooltip definition=\"Reference: Used for identity verification and document integrity as opposed to data integrity. Digital signature, Wikipedia. Jun. 2023. Accessed: Jun. 27, 2023.\">[digital signatures](https://en.wikipedia.org/w/index.php?title=Digital_signature&oldid=1161173191)</DefinitionTooltip>. This article will discuss the basic ideas and security considerations underpinning cryptographic hash functions and outline potential vulnerabilities from the advent of quantum computing."
+    "[Hash functions](https://en.wikipedia.org/w/index.php?title=Cryptographic_hash_function&oldid=1159000809) represent a valuable construct in cryptography as they help enable validation with confidentiality. As such, hash functions form an important component of mechanisms for data authentication and integrity, such as [hash-based message authentication codes](https://en.wikipedia.org/w/index.php?title=HMAC&oldid=1158164088) (HMAC) and [digital signatures](https://en.wikipedia.org/w/index.php?title=Digital_signature&oldid=1161173191). This article will discuss the basic ideas and security considerations underpinning cryptographic hash functions and outline potential vulnerabilities from the advent of quantum computing."
    ]
   },
   {
@@ -100,7 +100,7 @@
    "source": [
     "## Example of cryptographic hashing in Python with SHA-256\n",
     "\n",
-    "This simple example demonstrates cryptographic hashing using the popular <DefinitionTooltip definition=\"Reference: SHA-2, Wikipedia. May 2023. Accessed: Jun. 27, 2023.\">[SHA-256](https://en.wikipedia.org/w/index.php?title=SHA-2&oldid=1155462953)</DefinitionTooltip> algorithm as provided by the `cryptography` Python library."
+    "This simple example demonstrates cryptographic hashing using the popular [SHA-256](https://en.wikipedia.org/w/index.php?title=SHA-2&oldid=1155462953) algorithm as provided by the `cryptography` Python library."
    ]
   },
   {
@@ -229,7 +229,7 @@
    "source": [
     "## Security of cryptographic hashing\n",
     "\n",
-    "The security of a CHF is typically assessed based on resistance to two types of attacks: <DefinitionTooltip definition=\"Reference: Preimage attack, Wikipedia. Mar. 2023. Accessed: Jun. 27, 2023.\">[pre-image](https://en.wikipedia.org/w/index.php?title=Preimage_attack&oldid=1145879411)</DefinitionTooltip> and <DefinitionTooltip definition=\"Reference: Collision attack, Wikipedia. Feb. 2023. Accessed: Jun. 27, 2023.\">[collision](https://en.wikipedia.org/w/index.php?title=Collision_attack&oldid=1138239916)</DefinitionTooltip>.\n",
+    "The security of a CHF is typically assessed based on resistance to two types of attacks: [pre-image](https://en.wikipedia.org/w/index.php?title=Preimage_attack&oldid=1145879411) and [collision](https://en.wikipedia.org/w/index.php?title=Collision_attack&oldid=1138239916).\n",
     "\n",
     "### Pre-image resistance\n",
     "\n",
@@ -285,7 +285,7 @@
    "source": [
     "### Hash length\n",
     "\n",
-    "Collision resistance is a harder requirement than pre-image resistance and necessitates output lengths twice as long as that needed for pre-image resistance. This is because a brute force attack known as the <DefinitionTooltip definition=\"Reference: Likelihood of finding two different sets of data with the same hash value. Birthday attack, Wikipedia. Jun. 2023.\">[birthday attack](https://en.wikipedia.org/w/index.php?title=Birthday_attack&oldid=1161075943)</DefinitionTooltip>, which can be used to identify hash collisions, has time complexity $2^{n/2}$.\n",
+    "Collision resistance is a harder requirement than pre-image resistance and necessitates output lengths twice as long as that needed for pre-image resistance. This is because a brute force attack known as the [birthday attack](https://en.wikipedia.org/w/index.php?title=Birthday_attack&oldid=1161075943), which can be used to identify hash collisions, has time complexity $2^{n/2}$.\n",
     "\n",
     "In the absence of cryptanalytic weaknesses, the security of a hash function is therefore primarily influenced by its hash length. The longer the hash, the more secure it is, as it becomes harder to mount brute force attacks."
    ]
@@ -307,10 +307,10 @@
     "| Blake2        | Variable (up to 512) | Cryptography, replacing MD5/SHA-1 in some systems          |\n",
     "| Blake3        | Variable (up to 256) | Cryptography, file hashing, data integrity                 |\n",
     "\n",
-    "- <DefinitionTooltip definition=\"Reference: MD5, Wikipedia. Jun. 2023. Accessed: Jun. 27, 2023.\">[MD5](https://en.wikipedia.org/w/index.php?title=MD5&oldid=1161719955)</DefinitionTooltip> and <DefinitionTooltip definition=\"Reference: SHA-1, Wikipedia. Jun. 2023. Accessed: Jun. 27, 2023.\">[SHA-1](https://en.wikipedia.org/w/index.php?title=SHA-1&oldid=1161401043)</DefinitionTooltip>, while still seen in less sensitive applications places, are considered deprecated in terms of collision resistance and are not recommended for new systems.\n",
-    "SHA-256, part of the <DefinitionTooltip definition=\"Reference: SHA-2, Wikipedia. May 2023. Accessed: Jun. 27, 2023.\">[SHA-2](https://en.wikipedia.org/w/index.php?title=SHA-2&oldid=1155462953)</DefinitionTooltip> family, is widely used and currently secure for most applications.\n",
-    "- <DefinitionTooltip definition=\"Reference: SHA-3, Wikipedia. Jun. 2023. Accessed: Jun. 27, 2023.\">[SHA-3](https://en.wikipedia.org/w/index.php?title=SHA-3&oldid=1161463128)</DefinitionTooltip> is a newer standard that was selected by NIST in 2015 as the winner of the NIST hash function competition. It's designed to be a drop-in replacement for SHA-2, but it also has some different internal characteristics and is resistant to certain types of attacks that might be effective against SHA-2.\n",
-    "- <DefinitionTooltip definition=\"Reference: BLAKE, Wikipedia. Jun. 2023. Accessed: Jun. 27,2023.\">[Blake2 and Blake3](https://en.wikipedia.org/w/index.php?title=BLAKE_(hash_function)&oldid=1161463384)</DefinitionTooltip> are cryptographic hash functions that are faster than MD5, SHA-1, SHA-2, and SHA-3, but at least as secure as the latest standard, SHA-3. They are increasingly being used in new systems, particularly where speed is important."
+    "- [MD5](https://en.wikipedia.org/w/index.php?title=MD5&oldid=1161719955) and [SHA-1](https://en.wikipedia.org/w/index.php?title=SHA-1&oldid=1161401043), while still seen in less sensitive applications places, are considered deprecated in terms of collision resistance and are not recommended for new systems.\n",
+    "SHA-256, part of the [SHA-2](https://en.wikipedia.org/w/index.php?title=SHA-2&oldid=1155462953) family, is widely used and currently secure for most applications.\n",
+    "- [SHA-3](https://en.wikipedia.org/w/index.php?title=SHA-3&oldid=1161463128) is a newer standard that was selected by NIST in 2015 as the winner of the NIST hash function competition. It's designed to be a drop-in replacement for SHA-2, but it also has some different internal characteristics and is resistant to certain types of attacks that might be effective against SHA-2.\n",
+    "- [Blake2 and Blake3](https://en.wikipedia.org/w/index.php?title=BLAKE_(hash_function)&oldid=1161463384) are cryptographic hash functions that are faster than MD5, SHA-1, SHA-2, and SHA-3, but at least as secure as the latest standard, SHA-3. They are increasingly being used in new systems, particularly where speed is important."
    ]
   },
   {
@@ -338,7 +338,7 @@
     "\n",
     "In practical terms, this means that a 256-bit CHF, which is currently considered secure against pre-image attacks by classical computers, would provide the same level of security as a 128-bit CHF when faced with a quantum attacker utilizing Grover's algorithm.\n",
     "\n",
-    "Grover's algorithm by itself is not known to provide additional quantum speedups with respect to collision attacks beyond the limit set by the <DefinitionTooltip definition=\"Reference: Likelihood of finding two different sets of data with the same hash value. Birthday attack, Wikipedia. Jun. 2023. Accessed: Jun. 27, 2023.\">[birthday attack](https://en.wikipedia.org/w/index.php?title=Birthday_attack&oldid=1161075943)</DefinitionTooltip>, which can be carried out on classical computers. Since the classical birthday attack already requires CHFs to employ hash lengths that are twice as long as needed for pre-image resistance, the fact that Grover search effectively halves the hash length with respect to pre-image attacks does not pose a practical threat.\n",
+    "Grover's algorithm by itself is not known to provide additional quantum speedups with respect to collision attacks beyond the limit set by the [birthday attack](https://en.wikipedia.org/w/index.php?title=Birthday_attack&oldid=1161075943), which can be carried out on classical computers. Since the classical birthday attack already requires CHFs to employ hash lengths that are twice as long as needed for pre-image resistance, the fact that Grover search effectively halves the hash length with respect to pre-image attacks does not pose a practical threat.\n",
     "\n",
     "For example, in the case of SHA-256, performing on the order of $2^{128}$ operations to execute a Grover-assisted pre-image attack would still be infeasible in the foreseeable future."
    ]
@@ -350,7 +350,7 @@
    "source": [
     "#### BHT algorithm\n",
     "\n",
-    "A quantum algorithm that combines aspects of the birthday attack with Grover search was proposed in 1997 by <DefinitionTooltip definition=\"Reference: G.Brassard, P. Hoyer, and A. Tapp, Quantum Algorithm for the Collision Problem, 1998, pp. 163-169.\">[Bassard, Høyer, and Tapp](http://arxiv.org/abs/quant-ph/9705002)</DefinitionTooltip> (BHT) and affords a theoretical scaling of $O(2^{n/3})$ for finding hash collisions. However, this improved scaling is predicated on the existence of quantum random access memory <DefinitionTooltip definition=\"Reference: X.Bonnetain, A. Chailloux, A. Schrottenloher, and Y. Shen,“Finding many Collisions via Reusable Quantum Walks.”arXiv, May 2022.\">[QRAM](http://arxiv.org/abs/2205.14023)</DefinitionTooltip> technology, which currently does not exist.\n",
+    "A quantum algorithm that combines aspects of the birthday attack with Grover search was proposed in 1997 by [Bassard, Høyer, and Tapp](http://arxiv.org/abs/quant-ph/9705002) (BHT) and affords a theoretical scaling of $O(2^{n/3})$ for finding hash collisions. However, this improved scaling is predicated on the existence of quantum random access memory [QRAM](http://arxiv.org/abs/2205.14023) technology, which currently does not exist.\n",
     "\n",
     "Without QRAM, the realizable scaling is $\\tilde{O}(2^{2n/5})$ and for hash lengths currently in use, this marginal improvement in collision-finding capability relative to the birthday attack does not represent a critical threat."
    ]
