Headline style caps

--- a/docs/tutorials/lrcx-with-parallel-bell-pairs.ipynb
+++ b/docs/tutorials/lrcx-with-parallel-bell-pairs.ipynb
@@ -1139,11 +1139,11 @@
    "id": "4ba303da",
    "metadata": {},
    "source": [
-    "### Quality Metric\n",
+    "### Quality metrics\n",
     "\n",
     "To evaluate the success of the long-range CX protocol, we measure how close the output state is to the ideal Bell state. A convenient way to quantify this is by computing the state fidelity using expectation values of Pauli operators. Fidelity for a Bell state on the control and target state can be computed after knowing the $\\bracket{XX}$, $\\bracket{YY}$, and $\\bracket{ZZ}$. In particular,\n",
     "\n",
-    "$$ F = \\frac{1}{4} (1 + \\braket{XX} - \\braket{YY} + \\braket{ZZ})$$\n",
+    "$$ F = \\frac{1}{4} (1 + \\bracket{XX} - \\bracket{YY} + \\bracket{ZZ})$$\n",
     "\n",
     "To compute these expectation values from raw measurement data, we define a set of helper functions:\n",
     "\n",
