updates to make it pass linting

--- a/docs/tutorials/lrcx-with-parallel-bell-pairs.ipynb
+++ b/docs/tutorials/lrcx-with-parallel-bell-pairs.ipynb
@@ -5,7 +5,7 @@
    "id": "44d97249",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore hcords, ycords, xcords, ecolor, elinewidth, allcr */}\n",
+    "{/* cspell:ignore hcords, ycords, xcords, ecolor, elinewidth, allcr, braket */}\n",
     "# Long-range CNOT with parallel bell pairs\n",
     "*Usage estimate: 4 minutes on a Heron r2 processor (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
@@ -441,7 +441,7 @@
    "source": [
     "### Putting it all together\n",
     "We combine the various steps defined above to create a long-range CX gate on two ends of an 1D line. The steps include\n",
-    "- Initializing the control qubit in $\\ket{+}$\n",
+    "- Initializing the control qubit in $\\\\ket{+}$\n",
     "- Preparing Bell pairs\n",
     "- Measuring neighboring qubit pairs\n",
     "- Applying feedforward corrections dependent on the MCMs"
@@ -1141,9 +1141,9 @@
    "source": [
     "### Quality metrics\n",
     "\n",
-    "To evaluate the success of the long-range CX protocol, we measure how close the output state is to the ideal Bell state. A convenient way to quantify this is by computing the state fidelity using expectation values of Pauli operators. Fidelity for a Bell state on the control and target state can be computed after knowing the $\\bracket{XX}$, $\\bracket{YY}$, and $\\bracket{ZZ}$. In particular,\n",
+    "To evaluate the success of the long-range CX protocol, we measure how close the output state is to the ideal Bell state. A convenient way to quantify this is by computing the state fidelity using expectation values of Pauli operators. Fidelity for a Bell state on the control and target state can be computed after knowing the $\\braket{XX}$, $\\braket{YY}$, and $\\braket{ZZ}$. In particular,\n",
     "\n",
-    "$$ F = \\frac{1}{4} (1 + \\bracket{XX} - \\bracket{YY} + \\bracket{ZZ})$$\n",
+    "$$ F = \\frac{1}{4} (1 + \\braket{XX} - \\braket{YY} + \\braket{ZZ})$$\n",
     "\n",
     "To compute these expectation values from raw measurement data, we define a set of helper functions:\n",
     "\n",
@@ -1182,7 +1182,7 @@
    "id": "388b6a87",
    "metadata": {},
    "source": [
-    "We compute the fidelity for the dynamic long-range CX circuits.  For each distance, we extract measurement outcomes in the $\\bracket{XX}$, $\\bracket{YY}$, and $\\bracket{ZZ}$ bases. These results are combined using the previously defined helper functions to calculate the fidelity according to  $F = \\tfrac{1}{4} \\big( 1 + \\langle XX \\rangle - \\langle YY \\rangle + \\langle ZZ \\rangle \\big)$. This provides the observed fidelity of the dynamically executed protocol at each distance."
+    "We compute the fidelity for the dynamic long-range CX circuits.  For each distance, we extract measurement outcomes in the $\\braket{XX}$, $\\braket{YY}$, and $\\braket{ZZ}$ bases. These results are combined using the previously defined helper functions to calculate the fidelity according to  $F = \\tfrac{1}{4} \\big( 1 + \\langle XX \\rangle - \\langle YY \\rangle + \\langle ZZ \\rangle \\big)$. This provides the observed fidelity of the dynamically executed protocol at each distance."
    ]
   },
   {
