--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -91,7 +91,7 @@ Workload optimization focuses on either efficient orchestration of classical and
 
 * [Long-range entanglement with dynamic circuits](/docs/tutorials/long-range-entanglement)
 
-* [Long-range CNOT with parallel bell pairs](/docs/tutorials/lrcx-with-parallel-bell-pairs)
+* [Long-range CNOT with parallel Bell pairs](/docs/tutorials/lrcx-with-parallel-bell-pairs)
 
 
 </details>
