--- a/docs/tutorials/lrcx-with-parallel-bell-pairs.ipynb
+++ b/docs/tutorials/lrcx-with-parallel-bell-pairs.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "{/* cspell:ignore hcords, ycords, xcords, ecolor, elinewidth, allcr, braket */}\n",
     "# Long-range CNOT with parallel bell pairs\n",
-    "*Usage estimate: 4 minutes on a Heron r2 processor (NOTE: This is an estimate only. Your runtime may vary.)*"
+    "*Usage estimate: 4 minutes on a Heron r2 processor. (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
@@ -21,7 +21,7 @@
     "\n",
     "Following the approach by Elisa Bäumer et al. in [1](#ref-1), the method uses mid-circuit measurement and feedforward to achieve constant-depth gates regardless of qubit separation. It creates intermediate Bell pairs, measures one qubit from each pair, and applies classically conditioned gates to propagate entanglement across the device. This avoids long SWAP chains, reducing both circuit depth and exposure to two-qubit gate errors.\n",
     "\n",
-    "In this notebook, we adapt the protocol for IBM Quantum hardware and extend it to run multiple LRCX operations in parallel, allowing us to explore how performance scales with the number of simultaneous conditional operations."
+    "In this notebook, we adapt the protocol for IBM Quantum&reg; hardware and extend it to run multiple LRCX operations in parallel, allowing us to explore how performance scales with the number of simultaneous conditional operations."
    ]
   },
   {
@@ -33,8 +33,8 @@
     "\n",
     "Before starting this tutorial, ensure that you have the following installed:\n",
     "\n",
-    "- Qiskit SDK 2.0 or later, with visualization support ( `pip install 'qiskit[visualization]'` )\n",
-    "- Qiskit Runtime ( `pip install qiskit-ibm-runtime` ) 0.37 or later"
+    "- Qiskit SDK v2.0 or later, with visualization support ( `pip install 'qiskit[visualization]'` )\n",
+    "- Qiskit Runtime ( `pip install qiskit-ibm-runtime` ) v0.37 or later"
    ]
   },
   {
@@ -227,7 +227,7 @@
    "metadata": {},
    "source": [
     "### (iii) Measure neighboring qubit pairs in the Bell basis\n",
-    "Next, we measure *unentangled* neighboring qubits in the Bell basis (i.e., two-qubit measurements of $XX$ and $ZZ$). This creates a long-range Bell pair between the target qubit, and the qubit adjacent to the control (up to Pauli corrections, which will be implemented via feedforward in the next step). In parallel, we implement the entangling measurement that teleports the CNOT gate to act on the intended target qubit."
+    "Next, we measure *unentangled* neighboring qubits in the Bell basis (two-qubit measurements of $XX$ and $ZZ$). This creates a long-range Bell pair between the target qubit, and the qubit adjacent to the control (up to Pauli corrections, which will be implemented via feedforward in the next step). In parallel, we implement the entangling measurement that teleports the CNOT gate to act on the intended target qubit."
    ]
   },
   {
@@ -408,7 +408,7 @@
     "\n",
     "    qc = (\n",
     "        qc.copy()\n",
-    "    )  # we copy the circuit because we want to measure in different bases\n",
+    "    )  # We copy the circuit because we want to measure in different bases\n",
     "    cr = qc.cregs[0]\n",
     "\n",
     "    if add_barrier:\n",
@@ -439,7 +439,7 @@
    "id": "072f8605",
    "metadata": {},
    "source": [
-    "### Putting it all together\n",
+    "### Put it all together\n",
     "We combine the various steps defined above to create a long-range CX gate on two ends of an 1D line. The steps include\n",
     "- Initializing the control qubit in $\\\\ket{+}$\n",
     "- Preparing Bell pairs\n",
@@ -489,7 +489,7 @@
    "id": "ad4224f2",
    "metadata": {},
    "source": [
-    "### Generating circuits for different distances\n",
+    "### Generate circuits for different distances\n",
     "\n",
     "We now generate long-range CX circuits for a range of qubit separations. For each distance, we build circuits that measure in the $XX$, $YY$, and $ZZ$ bases, which will later be used to compute fidelities.\n",
     "\n",
@@ -536,11 +536,11 @@
     "    44,\n",
     "    55,\n",
     "    60,\n",
-    "]  # distances for long range CX. distance of 0 is a nearest-neighbor CX\n",
+    "]  # Distances for long range CX. distance of 0 is a nearest-neighbor CX\n",
     "distances.sort()\n",
     "assert (\n",
     "    min(distances) >= 0\n",
-    ")  # only works for distance larger than 2 because classical register cannot be empty\n",
+    ")  # Only works for distance larger than 2 because classical register cannot be empty\n",
     "basis_list = [\"XX\", \"YY\", \"ZZ\"]\n",
     "\n",
     "circuits_dyn = []\n",
