--- a/docs/tutorials/lrcx-with-parallel-bell-pairs.ipynb
+++ b/docs/tutorials/lrcx-with-parallel-bell-pairs.ipynb
@@ -1452,7 +1452,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Long-range CNOT with parallel bell pairs"
+  "title": "Long-range CNOT with parallel Bell pairs"
  },
  "nbformat": 4,
  "nbformat_minor": 5
