bring in uncommitted changes from @beckykd

--- a/docs/guides/access-instances-platform-apis.mdx
+++ b/docs/guides/access-instances-platform-apis.mdx
@@ -18,7 +18,8 @@ Some relevant pages:
 - [Update a resource instance](https://cloud.ibm.com/apidocs/resource-controller/resource-controller#update-resource-instance)
 - [Get a resource instance](https://cloud.ibm.com/apidocs/resource-controller/resource-controller#get-resource-instance)
 - [Get a list of all resource instances](https://cloud.ibm.com/apidocs/resource-controller/resource-controller#list-resource-instances)  
-    - When getting a list of all resource instances, note that you can filter to only Qiskit Runtime instances with `resource_id = "b6049020-80f4-11eb-a0f7-e35ec9b4054f"`
+    
+    When getting a list of all resource instances, note that you can filter to only Qiskit Runtime instances with `resource_id = "b6049020-80f4-11eb-a0f7-e35ec9b4054f"`
 
 </Admonition>
 
@@ -29,15 +30,15 @@ In the body when provisioning an instance:
 
 - **instance_limit_seconds** (string or null, `^[0-9]+$`): The limit to set on the instance. For Open Plan: if omitted, this defaults to 10 minutes.
 .
-- **usage_allocation_seconds** (string or null, `^[0-9]+$`): Allotted time for the instance, used by the fair-share scheduler to determine the priority in the queue, based on usage of all QPUs. (This does not apply to Pay-As-You-Go.)
-- **backends** (Array of list of backends (strings or null) or array with "ANY")): the allow-list of names of backends that are available to this instance. Default: `["ANY"]`, means all backends available on this plan. `[]` means no backends.
+- **usage_allocation_seconds** (string or null, `^[0-9]+$`): Allotted time for the instance, used by the fair-share scheduler to determine the priority in the queue, based on usage of all QPUs. (This does not apply to Pay-As-You-Go instances.)
+- **backends** (Array of lists of backends (strings or null) or array with "ANY")): the allow-list of names of backends that are available to this instance. Default: `["ANY"]`, means all backends available on this plan. `[]` means no backends.
 
 ## `extensions`
 
 In the response when provisioning or when getting the details of an instance:
 
-> Additional instance properties contributed by the service that are represented as key-value pairs. These properties persist with the instance under the extensions property.
+Additional instance properties contributed by the service that are represented as key-value pairs. These properties persist with the instance under the extensions property.
 
-- **instance_limit_seconds** (integer or null, `>= 0`): The limit to set on the instance.
+- **instance_limit_seconds** (integer or null, `>= 0`): The time limit to set on the instance.
 - **usage_allocation_seconds** (integer or null, `>= 0`): Allotted time for the instance, used by the fair-share scheduler to determine the priority in the queue, based on usage of all QPUs.
-- **backends** (Required; array of list of backends (strings) or array with "ANY" (strings)): the allow-list of names of backends that are available to this instance. Default: `["ANY"]`, means all backends available on this plan. `[]` means no backends.
+- **backends** (Required; array of lists of backends (strings) or array with "ANY" (strings)): The allow-list of names of backends that are available to this instance. Default: `["ANY"]`, means all backends are available on this plan. `[]` means no backends.
