--- a/docs/guides/execute-on-hardware.mdx
+++ b/docs/guides/execute-on-hardware.mdx
@@ -54,6 +54,7 @@ expectation values of observables corresponding to physical quantities or cost f
 * [Minimize job run time](./minimize-time)
 * [Maximum execution time](./max-execution-time)
 * [Job limits](./job-limits)
+* [Organize and search by job tags](/docs/guides/add-job-tags)
 
 ### QPU and platform information
 
