--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -5,7 +5,7 @@
    "id": "ef283f37-0ad4-48c7-bb92-8a09baaae6e5",
    "metadata": {},
    "source": [
-    "# Tag, retrieve, and save results"
+    "# Retrieve and save job results"
    ]
   },
   {
@@ -34,134 +34,7 @@
    "id": "ec8277ad-1811-4318-8282-84d6d282bb17",
    "metadata": {},
    "source": [
-    "This guide focuses on best practices in retrieving and managing your job results, so that you can better organize, track, and understand your experiments."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "59e38320-db15-4566-b262-40d4fcf19b82",
-   "metadata": {},
-   "source": [
-    "## Add and search by job tags\n",
-    "\n",
-    "### Assign tags\n",
-    "\n",
-    "You can assign one or more tags to your jobs when you run them so that you can filter by a tag later. You might want to use job tags to label particular error mitigation settings, circuit parameters, and so forth."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "74a7a1ea-f2ae-4b8c-9499-af52840c2e74",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['experiment-2025', 'sampler-example']\n"
-     ]
-    }
-   ],
-   "source": [
-    "from qiskit_ibm_runtime import QiskitRuntimeService, Sampler\n",
-    "from qiskit import QuantumCircuit\n",
-    "from qiskit.transpiler import generate_preset_pass_manager\n",
-    "\n",
-    "service = QiskitRuntimeService()\n",
-    "backend = service.least_busy(simulator=False, operational=True)\n",
-    "\n",
-    "qc = QuantumCircuit(2)\n",
-    "qc.h(0)\n",
-    "qc.cx(0, 1)\n",
-    "qc.measure_all()\n",
-    "\n",
-    "sampler = Sampler(backend)\n",
-    "\n",
-    "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
-    "isa_circuit = pm.run(qc)\n",
-    "\n",
-    "# Assign tags before executing\n",
-    "sampler.options.environment.job_tags = [\"experiment-2025\", \"sampler-example\"]\n",
-    "\n",
-    "# Submit\n",
-    "job = sampler.run([isa_circuit])\n",
-    "\n",
-    "print(service.job(job.job_id()).tags)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2b29f9da-3fca-4ffc-b4b2-6f0d130b5b23",
-   "metadata": {},
-   "source": [
-    "### Add and update tags\n",
-    "\n",
-    "You can add tags after you submit a job with the `update_tags()` method. This method overwrites current tags, so if you have already assigned tags to a job and you want to add additional tags, be sure to re-assign the original tags."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "205ceaf7-f79d-4452-b4b0-9688e39a4564",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['sampler-example', 'experiment-2025', '127-qubit']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Add a new tag while keeping the previously assigned tags\n",
-    "job.update_tags([\"experiment-2025\", \"sampler-example\", \"127-qubit\"])\n",
-    "\n",
-    "# Confirm updated tags\n",
-    "print(job.tags)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9e2e8c4a-5fbb-4a15-ab75-ddb61e35b65e",
-   "metadata": {},
-   "source": [
-    "### Retrieve jobs by tag\n",
-    "\n",
-    "Display a list of jobs with certain tags as follows:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "b6db503e-46ef-406e-9420-ef73446df564",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<RuntimeJobV2('d38l3pkgenls73cf263g', 'sampler')>,\n",
-       " <RuntimeJobV2('d36s55gitjus73f5li10', 'sampler')>,\n",
-       " <RuntimeJobV2('d36s4mkda4cs73a8994g', 'sampler')>,\n",
-       " <RuntimeJobV2('d36rs9o0sqis73982e4g', 'sampler')>,\n",
-       " <RuntimeJobV2('d36rptsgenls73cda9n0', 'sampler')>,\n",
-       " <RuntimeJobV2('d36rohkgenls73cda87g', 'sampler')>,\n",
-       " <RuntimeJobV2('d36rnr0itjus73f5l4m0', 'sampler')>,\n",
-       " <RuntimeJobV2('d36rnp0itjus73f5l4j0', 'sampler')>,\n",
-       " <RuntimeJobV2('d35f3joitjus73f49ds0', 'sampler')>,\n",
-       " <RuntimeJobV2('d35bsn80sqis7396img0', 'sampler')>]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# List jobs with a specific tag or set of tags\n",
-    "\n",
-    "service.jobs(job_tags=[\"experiment-2025\", \"sampler-example\"])"
+    "Quantum workflows often take a while to complete and can run over many sessions. Restarting your Python kernel means you'll lose any results stored in memory. To avoid loss of data, you can save results to file and retrieve results of past jobs from IBM Quantum&reg; so your next session can continue where you left off."
    ]
   },
   {
@@ -169,11 +42,11 @@
    "id": "d32e82e4-331c-43ec-ac86-a657f29f1469",
    "metadata": {},
    "source": [
-    "## Retrieve jobs from IBM Quantum\n",
+    "## Retrieve job results from IBM Quantum\n",
     "\n",
     "IBM Quantum automatically stores results from every job for you to retrieve at a later date. Use this feature to continue quantum programs across kernel restarts and review past results. You can get the ID of a job programmatically through its `job_id` method, or you can see all your submitted jobs and their IDs on the [Workloads page](https://quantum.cloud.ibm.com/workloads).\n",
     "\n",
-    "To find a job programmatically, use the [`QiskitRuntimeService.jobs`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#jobs) method. By default, this returns the most recent jobs, but you can also filter jobs by backend name, creation date, and more. The following cell finds any jobs submitted in the last three months. The `created_after` argument must be a [`datetime.datetime`](https://docs.python.org/3.8/library/datetime.html#datetime.datetime) object."
+    "To find a job programmatically, use the [`QiskitRuntimeService.jobs`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#jobs) method. By default, this returns the most recently submitted jobs, but you can also filter jobs by backend name, creation date, and more. The following cell finds any jobs submitted in the last three months. The `created_after` argument must be a [`datetime.datetime`](https://docs.python.org/3.8/library/datetime.html#datetime.datetime) object."
    ]
   },
   {
@@ -272,7 +145,7 @@
    "metadata": {},
    "source": [
     "<CodeAssistantAdmonition\n",
-    "  tagLine=\"Always forgetting how to retrieve a job? Try this prompt with Qiskit Code Assistant:\"\n",
+    "  tagLine=\"Always forgetting how to retrieve a job result? Try this prompt with Qiskit Code Assistant:\"\n",
     "  prompts={[\n",
     "    \"# Retrieve job JOB_ID from IBM Runtime and print the result\"\n",
     "  ]}\n",
@@ -286,7 +159,7 @@
    "source": [
     "## Save results to disk\n",
     "\n",
-    "Quantum workflows often take a while to complete and can run over many sessions. Restarting your Python kernel means you'll lose any results stored in memory. To avoid loss of data, you can save results to disk. To do this, use Python's built-in JSON library with Qiskit Runtime's encoders."
+    "You may also want to save results to disk. To do this, use Python's built-in JSON library with encoders from Qiskit Runtime."
    ]
   },
   {
@@ -339,7 +212,7 @@
   }
  ],
  "metadata": {
-  "description": "Use job_id and job tags to organize job results, and save results to disk.",
+  "description": "How to use job_id to retrieve results, and how to save results to disk.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -357,7 +230,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Tag, retrieve, and save results"
+  "title": "Retrieve and save job results"
  },
  "nbformat": 4,
  "nbformat_minor": 4
