Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>
Co-authored-by: Elena Peña Tapia <57907331+ElePT@users.noreply.github.com>

--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -21,7 +21,7 @@ Your user account is associated with one or more [instances,](./instances) ident
 
 1. If you do not already have one, set up an [IBM Cloud account.](https://quantum.cloud.ibm.com/registration)
    <Admonition type="note">
-   You can be part of multiple IBM Cloud accounts.  You can access any of your IBM Cloud accounts at any time from the account switcher in the header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
+   You can be part of multiple IBM Cloud accounts.  You can access any of your IBM Cloud accounts at any time from the account switcher in the header of the [IBM Quantum Platform](https://quantum.cloud.ibm.com) interface.
    </Admonition>
 1. Log in to [IBM Quantum Platform](https://quantum.cloud.ibm.com) with an IBMid or Google account.  If you don't have one, you are guided through creating one. (These login credentials are not your IBM Cloud account credentials.)
 1. Make sure that the correct account and region are selected in the account switcher in the header, as shown in the following image.
