--- a/docs/guides/save-credentials.mdx
+++ b/docs/guides/save-credentials.mdx
@@ -7,7 +7,7 @@ description: Save your login credentials instead of manually entering them
 If you are working in a trusted Python environment (such as on a personal laptop or workstation), you can use the `save_account()` method to save your credentials locally, then use them to initialize the service.
 
 <Admonition type="note" title="Notes">
-      * If you are not using a trusted environment, follow the instructions in [Initialize the service in an untrusted environment](/docs/guides/cloud-setup-untrusted) instead. For example, if you are using a public comptuer.
+      * If you are using a public computer or other untrusted environment, follow the instructions in [Initialize the service in an untrusted environment](/docs/guides/cloud-setup-untrusted) instead.
       * Follow [these instructions](/docs/guides/cloud-setup-rest-api) if you want to connect by using the REST API instead of using Qiskit.
       * If necessary, use [this information](/docs/guides/quickstart-steps-org#firewall) to configure your firewall to enable access to the IBM Quantum API endpoints.
 </Admonition>
@@ -17,7 +17,7 @@ If you are working in a trusted Python environment (such as on a personal laptop
 1. Ensure that you have an [IBM Cloud account.](https://quantum.cloud.ibm.com/registration)
 1. Ensure you are working in an active Python environment with the [Qiskit SDK and Qiskit Runtime installed](/docs/guides/install-qiskit#local).
 1. Activate the Python virtual environment and run Python in your virtual environment.
-1. Find your access credentials
+1. Find your access credentials.
     1. Log in to [IBM Quantum Platform](https://quantum.cloud.ibm.com) with an IBMid or Google account.
     1. Make sure that the correct account and region are selected in the account switcher in the header.
     1. Find your API key. From the [dashboard](https://quantum.cloud.ibm.com/), create your API key, then copy it to a secure location so you can use it for authentication. Note that you can use the same API key to connect to any region.
@@ -65,8 +65,8 @@ If you don't provide an instance CRN and pass these credentials to Qiskit Runtim
 ### Available options
 
 - **`token`**: IBM Cloud API key. Your token is confidential. Do not share your token in public code.
-- **`instance`**: Optionally specify the instance to use.
-- **`plans_preference`**: Optionally set the types of plans to prioritize. This is ignored if the instance is specified. Available options are `open` and `premium`. Instances of a certain plan type are excluded if the plan name is not specified. For example, if [`open`] is passed in, only open plan instances are available. This is ignored if `instance` is specified.
+- **`instance`**: Optionally specify the instance to use through its IBM Cloud CRN or instance name.
+- **`plans_preference`**: Optionally set the types of plans to prioritize. This is ignored if the instance is specified. Available options are `open` and `premium`. Instances of a certain plan type are excluded if the plan name is not specified. For example, if [`open`] is passed in, only Open Plan instances are available. This is ignored if `instance` is specified.
 - **`region`**: Optionally set the region to use. Accepted values are `us-east` and `eu-de`. This is ignored if `instance` is specified.
 - **`tags`**: Optionally specify the instance's tags. Accepts a list of tag name strings. This is ignored if `instance` is specified.
 - **`name`**: Optionally name this set of account credentials.
@@ -107,14 +107,14 @@ QiskitRuntimeService.save_account(
 
 * If you are saving multiple accounts, use the `name` parameter to differentiate them.
 * Credentials are saved to `$HOME/.qiskit/qiskit-ibm.json`.  Do not manually edit this file.
-* If you don't save your credentials, you must specify them every time you start a new session (instantiate the Qiskit Runtime Service).
+* If you don't save your credentials, you must specify them every time you start a new session (instantiate the Qiskit Runtime service).
 * If you manually specify your credentials, a saved account will not be used.
 
 # Next steps
 
 <Admonition type="tip" title="Recommendations">
-  -  [Overview of available plans.](plans-overview)
-  -  [Configure the Qiskit SDK locally.](configure-qiskit-local)
+  -  [Overview of available plans.](/docs/guides/plans-overview)
+  -  [Configure the Qiskit SDK locally.](/docs/guides/configure-qiskit-local)
   -  [View your available QPUs.](/docs/guides/qpu-information#available)
   -  [Initialize the Qiskit Runtime service](/docs/guides/initialize-account) in a trusted Python environment
   -  [Initialize the Qiskit Runtime service in an **untrusted environment**](/docs/guides/cloud-setup-untrusted)
