--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -195,7 +195,7 @@ You can also view your available QPUs by using the [backends API.](/docs/api/qis
 
 ```python
    QiskitRuntimeService(instance="my_instance_CRN")
-   service.backend()
+   service.backends()
 ```
 
 <span id="native-gates"></span>
