Add testing output to tutorial

--- a/docs/tutorials/chsh-inequality.ipynb
+++ b/docs/tutorials/chsh-inequality.ipynb
@@ -152,7 +152,7 @@
     {
      "data": {
       "text/plain": [
-       "'ibm_kingston'"
+       "'test_heron_pok_1'"
       ]
      },
      "execution_count": 2,
@@ -438,6 +438,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "279131cd",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"value_01\": [-0.035350177304964536, 0.9675656582446808, 0.673429881427305, 0.4867125166223404, 1.450274961214539, 0.5913016677748227, 1.6600385084219857, -1.9681405141843973, -0.3869092143173759, 0.1775369847074468, 1.1474470855496453, 1.5759571697695036, -0.4406201518173759, -0.3737256205673758, 1.0843618406471631, -1.8248801806294328, -1.1137556792996455, 0.7346589649822695, 0.25976216201241137, 1.001257064494681, -0.416206089317376], \"value_02\": [-0.15644392730496454, -1.0261594082446808, -0.574797068927305, 0.5228453291223404, 0.8897350121897163, 0.8182520223847517, -1.6307416334219857, 0.32968334441489366, 0.3800732768173759, 0.1589822972074468, -0.9468639184397163, 0.5771415115248227, -0.3771435893173759, 1.0545766843971631, -0.29003559951241137, -0.6715737200797872, 2.7444003490691493, 0.7805574024822695, 0.26366841201241137, 2.362959192154255, 2.1849339261968086]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This cell is used for notebook testing in our CI pipelines\n",
+    "import json\n",
+    "\n",
+    "results = {\"value_01\": chsh1_est.tolist(), \"value_02\": chsh2_est.tolist()}\n",
+    "results_string = json.dumps(results)\n",
+    "print(results_string)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "63e63853",
    "metadata": {},
@@ -477,12 +504,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "CHSH inequality",
-  "vscode": {
-   "interpreter": {
-    "hash": "1910f834ba40d1043b9ae723a4d216fb6c2faf55822807adca52e5ece8e3f1c8"
-   }
-  }
+  "title": "CHSH inequality"
  },
  "nbformat": 4,
  "nbformat_minor": 5
